--- a/public/Desktop.css
+++ b/public/Desktop.css
@@ -34,6 +34,13 @@
     width: 100%;
 }
 
+.textt {
+    display: inline-block;
+    margin-top: 70px ;
+    margin-right: 130px ;
+    position: relative;
+}
+
 .text {
     margin-top: 60px ;
     margin-left: 10px ;
@@ -74,7 +81,7 @@
 .box5 {
     height: 90px;
     width: 180px;
-    background-color: #6d6139;
+    background-image: url(./Images/Mountain.jpg);
     margin-left: 25px;
     margin-bottom: 5px;
 }
@@ -148,6 +155,7 @@
     background-color: #00a400;
     margin-left: 5px;
 }
+
 .box13 {
     height: 90px;
     width: 180px;
