--- a/public/Flip.css
+++ b/public/Flip.css
@@ -1,24 +1,24 @@
 .flip-card-front .imagesmini {
-    margin-left: 5px;
-    margin-top: 10px;
-    height: 1%;
-    width: 100%;
+  margin-left: 5px;
+  margin-top: 10px;
+  height: 1%;
+  width: 100%;
 }
 
 .flip-card-front .images {
-    margin-left: 10px;
-    margin-top: 10px;
-    height: 1%;
-    width: 100%;
+  margin-left: 10px;
+  margin-top: 10px;
+  height: 1%;
+  width: 100%;
 }
 
 .flip-card-front .text {
-    margin-top: 60px ;
-    margin-left: 10px ;
-    position: absolute;
+  margin-top: 60px;
+  margin-left: 10px;
+  position: absolute;
 }
 
-.box8 .flip-card {
+.same .flip-card {
   background-color: transparent;
   width: 90px;
   height: 90px;
@@ -26,64 +26,63 @@
 }
 
 .flip-card {
-    background-color: transparent;
-    width: 180px;
-    height: 90px;
-    perspective: 1000px;
-  }
+  background-color: transparent;
+  width: 180px;
+  height: 90px;
+  perspective: 1000px;
+}
 
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
 
-  .box8 .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
+.B230 .flip-card:hover .flip-card-inner {
+  transform: rotateY(230deg);
+}
 
-  .box17 .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 1s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
+.same .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
 
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(230deg);
-  }
+.B360 .flip-card:hover .flip-card-inner {
+  transform: rotateY(720deg);
+}
 
-  .box8 .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
+.B520 .flip-card:hover .flip-card-inner {
+  transform: rotateY(520deg);
+}
 
-  .box17 .flip-card:hover .flip-card-inner {
-    transform: rotateY(1440deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-back {
-    background-color: #2980b9;
-    color: white;
-    transform: rotateY(180deg);
-  }
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.B230 .flip-card-back {
+  justify-content: center;
+  background-color: #ff0d76;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.B520 .flip-card-back {
+  justify-content: center;
+  background-color: #b1001b;
+  color: white;
+  transform: rotateY(520deg);
+}
+
+.same .flip-card-back {
+  justify-content: center;
+  background-color: #faf602;
+  color: rgb(0, 0, 0);
+  transform: rotateY(140deg);
+}
